--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-astroid==2.4.2
-dependency-injector==3.30.0
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-observable==1.0.3
-paho-mqtt==1.5.0
-pkg-resources==0.0.0
-pylint==2.5.3
+click==7.1.2
+configparser==5.0.0
+Flask==1.1.2
+Flask-Cors==3.0.8
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+singleton-decorator==1.0.0
 six==1.15.0
-toml==0.10.1
-typed-ast==1.4.1
-wrapt==1.12.1
+Werkzeug==1.0.1
