--- a/config.ini
+++ b/config.ini
@@ -5,3 +5,6 @@ port: 2566
 level: 10
 file_name: /tmp/ringlight.log
 file: false
+
+[angular]
+path: /home/gabriel/Documents/projects/RingLightAngular/dist/
